--- a/index.html
+++ b/index.html
@@ -140,6 +140,89 @@
   body.preauth #tabGroup{ display:none !important; }
   body:not(.preauth) #accessGroup{ display:none !important; }
 </style>
+
+<script>
+(function(){
+  // v7.6.6 diagnostics: show any click + allow URL auto-open
+  function setChip(msg){
+    const chip = document.getElementById('chipJS');
+    if(chip) chip.textContent = msg;
+  }
+  document.addEventListener('click', function(e){
+    const t = e.target;
+    const id = t && t.id ? ('#'+t.id) : (t && t.tagName ? t.tagName : 'elem');
+    setChip('JS: CLICK ' + id);
+  }, true);
+
+  // Auto-open modals based on URL params (works even if buttons are blocked)
+  function tryOpenFromURL(){
+    try{
+      const q = new URLSearchParams(location.search);
+      const open = (q.get('open')||'').toLowerCase();
+      // defer until DOM loaded
+      const run = () => {
+        if(open === 'cfg' || open === 'nube'){
+          try{ window.openCfgDialog && window.openCfgDialog(); }catch(e){}
+        }
+        if(open === 'cliente' || open === 'usuario' || open === 'admin'){
+          try{ window.openAuth && window.openAuth(open.toUpperCase()); }catch(e){}
+        }
+      };
+      if(document.readyState === 'loading') document.addEventListener('DOMContentLoaded', run);
+      else run();
+    }catch(e){}
+  }
+  tryOpenFromURL();
+})();
+</script>
+
+
+<script>
+/* v7.6.6 click-router: forces buttons to open modals even if inline handlers fail */
+(function(){
+  function show(id){ const el=document.getElementById(id); if(el) el.classList.remove('hidden'); }
+  function hide(id){ const el=document.getElementById(id); if(el) el.classList.add('hidden'); }
+  function setIntent(role){
+    try{ if(window.STATE) window.STATE.intent = role; else window.STATE = {intent: role}; }catch(e){}
+    const t=document.getElementById('authTitle'); if(t) t.textContent = role==='CLIENTE'?'Acceso cliente':(role==='USUARIO'?'Acceso usuario':'Acceso administrador');
+  }
+  function openAuth(role){ setIntent(role); show('authBackdrop'); try{document.getElementById('authEmail')?.focus();}catch(e){} }
+  function openCfg(){ show('cfgBackdrop'); try{document.getElementById('cfgUrl')?.focus();}catch(e){} }
+
+  // Expose globally as well
+  window.openAuth = openAuth;
+  window.openCfgDialog = openCfg;
+
+  // Capture clicks and route
+  document.addEventListener('click', function(e){
+    const t = e.target;
+    const btn = t.closest ? t.closest('button,span') : t;
+    const id = btn && btn.id ? btn.id : '';
+    // route header buttons
+    if(id==='btnAccessCliente'){ e.preventDefault(); e.stopPropagation(); openAuth('CLIENTE'); return; }
+    if(id==='btnAccessUsuario'){ e.preventDefault(); e.stopPropagation(); openAuth('USUARIO'); return; }
+    if(id==='btnAccessAdmin'){ e.preventDefault(); e.stopPropagation(); openAuth('ADMIN'); return; }
+    if(id==='btnCloud' || id==='chipCloud'){ e.preventDefault(); e.stopPropagation(); openCfg(); return; }
+
+    // close buttons
+    if(id==='authClose'){ e.preventDefault(); e.stopPropagation(); hide('authBackdrop'); return; }
+    if(id==='cfgClose'){ e.preventDefault(); e.stopPropagation(); hide('cfgBackdrop'); return; }
+
+    // backdrop click to close
+    if(t && t.id==='authBackdrop'){ hide('authBackdrop'); return; }
+    if(t && t.id==='cfgBackdrop'){ hide('cfgBackdrop'); return; }
+  }, true);
+
+  // Auto-open cfg if no config
+  document.addEventListener('DOMContentLoaded', function(){
+    try{
+      const has = (localStorage.getItem('supabase_url')||'') && (localStorage.getItem('supabase_anon')||'');
+      if(!has){ openCfg(); }
+    }catch(e){ openCfg(); }
+  });
+})();
+</script>
+
 </head>
 <body class="preauth">
   <div class="topbar" id="topbar">
@@ -152,9 +235,9 @@
 
     
     <div class="tabs" id="accessGroup">
-      <button class="tab" id="btnAccessCliente">CLIENTE</button>
-      <button class="tab" id="btnAccessUsuario">USUARIO</button>
-      <button class="tab" id="btnAccessAdmin">ADMIN</button>
+      <button class="tab" id="btnAccessCliente" onclick="try{openAuth&&openAuth(\'CLIENTE\')}catch(e){console.error(e)}" >CLIENTE</button>
+      <button class="tab" id="btnAccessUsuario" onclick="try{openAuth&&openAuth(\'USUARIO\')}catch(e){console.error(e)}" >USUARIO</button>
+      <button class="tab" id="btnAccessAdmin" onclick="try{openAuth&&openAuth(\'ADMIN\')}catch(e){console.error(e)}" >ADMIN</button>
     </div>
 
     <div class="tabs" id="tabGroup" style="display:none">
@@ -163,9 +246,10 @@
     </div>
 
     <div class="right">
-      <button class="btn secondary" id="btnCloud">Nube</button>
-      <div class="chip" id="chipCloud">Nube: —</div>
-      <div class="chip" id="chipVer">v7.6</div>
+      <button class="btn secondary" id="btnCloud" onclick="try{window.openCfgDialog&&window.openCfgDialog()}catch(e){console.error(e)}">Nube</button>
+      <div class="chip" id="chipCloud" onclick="try{window.openCfgDialog&&window.openCfgDialog()}catch(e){console.error(e)}">Nube: —</div>
+      <div class="chip" id="chipVer">v7.6.6</div>
+      <div class="chip" id="chipJS">JS: …</div>
       <div class="chip" id="chipMode">Modo: Tablero</div>
       <div class="clock" id="clock">--</div>
     </div>
@@ -331,11 +415,11 @@
 
   <!-- Modal configuración nube -->
   <!-- Modal login admin -->
-  <div class="modal-backdrop hidden" id="authBackdrop" role="dialog" aria-modal="true">
+  <div class="modal-backdrop hidden" id="authBackdrop" role="dialog" aria-modal="true" onclick="if(event.target===this){try{closeAuth&&closeAuth()}catch(e){console.error(e)}}">
     <div class="modal auth">
       <div class="hd">
         <div style="font-weight:1000"><span id="authTitle">Acceso</span></div>
-        <button class="btn secondary" id="authClose">Cerrar</button>
+        <button class="btn secondary" id="authClose" onclick="try{closeAuth&&closeAuth()}catch(e){console.error(e)}" >Cerrar</button>
       </div>
       <div class="bd">
         <div class="grid" style="grid-template-columns: 1fr; gap:10px">
@@ -360,11 +444,11 @@
   </div>
 
 
-  <div class="modal-backdrop hidden" id="cfgBackdrop" role="dialog" aria-modal="true">
+  <div class="modal-backdrop hidden" id="cfgBackdrop" role="dialog" aria-modal="true" onclick="if(event.target===this){try{closeCfg&&closeCfg()}catch(e){console.error(e)}}">
     <div class="modal">
       <div class="hd">
         <div style="font-weight:1000">Conectar a Supabase</div>
-        <button class="btn secondary" id="cfgClose">Cerrar</button>
+        <button class="btn secondary" id="cfgClose" onclick="try{closeCfg&&closeCfg()}catch(e){console.error(e)}" >Cerrar</button>
       </div>
       <div class="bd">
         <div class="muted" style="font-size:12px;line-height:1.45;margin-bottom:12px">
@@ -796,16 +880,11 @@ const w = localStorage.getItem(LS_WORK);
     // 2) Dentro del grupo, orden por fecha/hora de arribo
     // 3) Si el usuario selecciona otra columna, se aplica dentro del grupo sin romper el "pendiente primero"
     rows.sort((a,b)=>{
-      const ga = (CONCLUIDOS.has(a.status) ? 1 : 0);
-      const gb = (CONCLUIDOS.has(b.status) ? 1 : 0);
-      if(ga!==gb) return ga-gb;
-
-      // default / columna No: orden por arribo
-      if(sortKey==='no'){
-        const ta = a.arribo_at ? new Date(a.arribo_at).getTime() : 0;
-        const tb = b.arribo_at ? new Date(b.arribo_at).getTime() : 0;
-        if(ta!==tb) return ta-tb;
-        return String(a.contenedor||'').localeCompare(String(b.contenedor||''), 'es', {sensitivity:'base'});
+      const ta = a.arribo_at ? new Date(a.arribo_at).getTime() : 0;
+      const tb = b.arribo_at ? new Date(b.arribo_at).getTime() : 0;
+      if(ta!==tb) return tb-ta; // más recientes arriba
+      return String(a.contenedor||'').localeCompare(String(b.contenedor||''), 'es', {sensitivity:'base'});
+    });
       }
 
       const r = cmp(a,b);
@@ -1100,6 +1179,17 @@ window.canDelete = false;
     const s = await ensureSupabase();
     const work = getWorkDate();
     const { startIso, endIso } = rangeISO(work);
+    // Evitar duplicados (mismo contenedor+cuenta+cedis en el mismo día)
+    const dup = await s.from('shipments').select('id').eq('is_deleted', false)
+      .eq('cedis', payload.cedis)
+      .eq('cuenta', payload.cuenta || '')
+      .eq('contenedor', payload.contenedor)
+      .gte('arribo_at', startIso).lte('arribo_at', endIso)
+      .limit(1);
+    if(dup.error) throw dup.error;
+    if((dup.data||[]).length){ alert('Ya existe este contenedor hoy (duplicado).'); return; }
+
+ \ \ const\ \{\ startIso,\ endIso\ \}\ =\ rangeISO\(work\);\
 
     // folio siguiente (por día)
     const maxq = await s.from('shipments').select('folio').gte('arribo_at', startIso).lte('arribo_at', endIso).order('folio', {ascending:false}).limit(1);
@@ -1122,7 +1212,11 @@ window.canDelete = false;
     };
 
     const ins = await s.from('shipments').insert([row]).select('*').single();
-    if(ins.error) throw ins.error;
+    if(ins.error){
+      // 23505 = unique_violation (si habilitas índice único)
+      if(String(ins.error.code||'')==='23505'){ alert('Duplicado detectado, no se insertó.'); await reloadData(true); return; }
+      throw ins.error;
+    }
 
     // evento
     await s.from('shipment_events').insert([{
@@ -1438,13 +1532,11 @@ function renderAdmin(){
 
     // pendientes (activos) primero, luego por arribo
     rows.sort((a,b)=>{
-      const ga = (CONCLUIDOS.has(a.status) ? 1 : 0);
-      const gb = (CONCLUIDOS.has(b.status) ? 1 : 0);
-      if(ga!==gb) return ga-gb;
       const ta = a.arribo_at ? new Date(a.arribo_at).getTime() : 0;
       const tb = b.arribo_at ? new Date(b.arribo_at).getTime() : 0;
-      if(ta!==tb) return ta-tb;
+      if(ta!==tb) return tb-ta; // más recientes arriba
       return String(a.contenedor||'').localeCompare(String(b.contenedor||''), 'es', {sensitivity:'base'});
+    });
     });
 
     el('adminList').innerHTML = rows.map((r,i)=>{
@@ -1764,6 +1856,29 @@ function renderAdmin(){
   function closeAuthDialog(){
     el('authBackdrop').classList.add('hidden');
   }
+
+  // --- v7.6.6: expose global openAuth(role) for header buttons ---
+  window.openAuth = function(role){
+    try{
+      if(typeof STATE !== 'undefined') STATE.intent = role;
+      if(typeof openAuthDialog === 'function') openAuthDialog();
+      const chip = document.getElementById('chipJS');
+      if(chip) chip.textContent = 'JS: CLICK';
+    }catch(e){
+      console.error(e);
+      alert('Error al abrir login: ' + (e?.message||e));
+    }
+  };
+  window.openCfgDialog = function(){
+    try{
+      if(typeof openCfg === 'function') openCfg();
+      const chip = document.getElementById('chipJS');
+      if(chip) chip.textContent = 'JS: CLICK';
+    }catch(e){
+      console.error(e);
+      alert('Error al abrir Nube: ' + (e?.message||e));
+    }
+  };
   function setPreauth(on){
     document.body.classList.toggle('preauth', !!on);
   }
@@ -1981,6 +2096,9 @@ try{
 
   // Admin add
   el('btnAdd').addEventListener('click', async ()=>{
+    const btn = el('btnAdd');
+    btn.disabled = true;
+    btn.textContent = 'Agregando…';
     const cedis = (el('f_cedis').value || '').trim();
     const cont = (el('f_contenedor').value || '').trim();
     if(!cedis || !cont){ alert('CEDIS y Contenedor/Unidad son obligatorios'); return; }
@@ -2001,7 +2119,9 @@ try{
       setTab('board');
     }catch(e){
       alert('Error al agregar: ' + (e?.message || e));
-    }
+    }    btn.disabled = false;
+    btn.textContent = 'Agregar';
+
   });
 
   // Histórico 2026/01/07 (opcional)
@@ -2115,5 +2235,29 @@ try{
 
 
 </script>
+
+<script>
+(function(){
+  const jsChip = document.getElementById('chipJS');
+  if(jsChip){ jsChip.textContent = 'JS: OK'; jsChip.style.borderColor='rgba(120,255,120,.35)'; jsChip.style.color='rgba(190,255,190,1)'; }
+  // Si no hay configuración de nube, abre el modal automáticamente
+  try{
+    const cfg = (typeof loadCfg==='function') ? (loadCfg()||{}) : {};
+    const need = !cfg || !cfg.url || !cfg.anon;
+    if(need && typeof openCfg==='function'){
+      // espera un tick para que el DOM esté listo
+      setTimeout(()=>{ try{ openCfg(); }catch(e){} }, 50);
+    }
+  }catch(e){}
+  // Captura errores globales y marca el chip
+  function markErr(){
+    const c = document.getElementById('chipJS');
+    if(c){ c.textContent='JS: ERROR'; c.style.borderColor='rgba(255,80,80,.55)'; c.style.color='rgba(255,170,170,1)'; }
+  }
+  window.addEventListener('error', markErr);
+  window.addEventListener('unhandledrejection', markErr);
+})();
+</script>
+
 </body>
 </html>
