--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <script>
 (function(){
-  // v7.6.8 diagnostics: show any click + allow URL auto-open
+  // v7.6.9 diagnostics: show any click + allow URL auto-open
   function setChip(msg){
     const chip = document.getElementById('chipJS');
     if(chip) chip.textContent = msg;
@@ -180,7 +180,7 @@
 
 
 <script>
-/* v7.6.8 click-router: fixes IDs (cfgAnon/cfgShare) + makes Guardar/Probar work reliably */
+/* v7.6.9 click-router: fixes IDs (cfgAnon/cfgShare) + makes Guardar/Probar work reliably */
 (function(){
   function $(id){ return document.getElementById(id); }
   function show(id){ const el=$(id); if(el) el.classList.remove('hidden'); }
@@ -300,6 +300,11 @@
     if(id==='cfgShare'){ e.preventDefault(); e.stopPropagation(); copyLink(); return; }
     if(id==='cfgClear'){ e.preventDefault(); e.stopPropagation(); clearCfg(); return; }
 
+    if(id==='btnLogin'){ setJS('JS: LOGIN'); e.preventDefault(); e.stopPropagation();
+      try{ if(window.__doLogin){ window.__doLogin(); return; } }catch(err){ console.error(err); }
+      return;
+    }
+
     if(id==='authClose'){ e.preventDefault(); e.stopPropagation(); hide('authBackdrop'); return; }
     if(id==='cfgClose'){ e.preventDefault(); e.stopPropagation(); hide('cfgBackdrop'); return; }
 
@@ -361,7 +366,7 @@
     <div class="right">
       <button class="btn secondary" id="btnCloud" onclick="try{window.openCfgDialog&&window.openCfgDialog()}catch(e){console.error(e)}">Nube</button>
       <div class="chip" id="chipCloud" onclick="try{window.openCfgDialog&&window.openCfgDialog()}catch(e){console.error(e)}">Nube: —</div>
-      <div class="chip" id="chipVer">v7.6.8</div>
+      <div class="chip" id="chipVer">v7.6.9</div>
       <div class="chip" id="chipJS">JS: …</div>
       <div class="chip" id="chipMode">Modo: Tablero</div>
       <div class="clock" id="clock">--</div>
@@ -1249,6 +1254,9 @@ window.canDelete = false;
 
   async function login(){
     try{
+      const btn = el('btnLogin');
+      const oldTxt = btn?.textContent || 'Entrar';
+      if(btn){ btn.disabled = true; btn.textContent='Entrando…'; }
       await ensureSupabase();
       const email = normalizeLoginEmail((el('authEmail').value || '').trim());
       const pass = (el('authPass').value || '').trim();
@@ -1268,8 +1276,10 @@ window.canDelete = false;
       await reloadData(true);
       await autoCloseIfNeeded();
       closeAuthDialog();
+      if(btn){ btn.disabled=false; btn.textContent=oldTxt; }
       alert('Sesión iniciada.');
     }catch(e){
+      if(btn){ btn.disabled=false; btn.textContent=oldTxt; }
       alert('Error al iniciar sesión: ' + (e?.message || e));
     }
   }
@@ -1970,7 +1980,7 @@ function renderAdmin(){
     el('authBackdrop').classList.add('hidden');
   }
 
-  // --- v7.6.8: expose global openAuth(role) for header buttons ---
+  // --- v7.6.9: expose global openAuth(role) for header buttons ---
   window.openAuth = function(role){
     try{
       if(typeof STATE !== 'undefined') STATE.intent = role;
@@ -2240,6 +2250,9 @@ try{
   // Histórico 2026/01/07 (opcional)
   el('btnSeed').addEventListener('click', async ()=>{
     try{
+      const btn = el('btnLogin');
+      const oldTxt = btn?.textContent || 'Entrar';
+      if(btn){ btn.disabled = true; btn.textContent='Entrando…'; }
       await ensureSupabase();
       await seedExampleCloud();
     }catch(e){
@@ -2250,6 +2263,9 @@ try{
   // Cierre del día (archivar concluidos)
   el('btnCloseDay').addEventListener('click', async ()=>{
     try{
+      const btn = el('btnLogin');
+      const oldTxt = btn?.textContent || 'Entrar';
+      if(btn){ btn.disabled = true; btn.textContent='Entrando…'; }
       await ensureSupabase();
       const day = getWorkDate();
       await closeDayCloud(day, false);
@@ -2282,6 +2298,9 @@ try{
     closeCfg();
     setCloudChip();
     try{
+      const btn = el('btnLogin');
+      const oldTxt = btn?.textContent || 'Entrar';
+      if(btn){ btn.disabled = true; btn.textContent='Entrando…'; }
       await ensureSupabase();
       await reloadData(true);
       alert('Conexión guardada.');
